# portifolio-mlziade

./: .gitignore  CLAUDE.md  CLAUDE_CODE.md  README.md  SEO_AUDIT.md  convert_profile_images.py  example.env  hello.py  manage.py  pyproject.toml
.github/workflows/: deploy.yml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blogpost_template_delete_template.py  0003_alter_blogpost_content_file_path_and_more.py  0004_alter_blogpost_content_file_path_and_more.py
blog/templates/: blog_base.html  blog_home.html  blog_post.html
playground/: urls.py  views.py  zllm_chat_system_prompt.txt
playground/game_of_life/: __init__.py  engine.py  patterns.json
playground/prompts/: zllm_chat_system_prompt.txt
playground/static/: conways.css  conways.js  zllm.css  zllm.js  zllm_chat.css  zllm_chat.js
playground/templates/: conways.html  zllm_chat_en.html  zllm_chat_pt-br.html  zllm_en.html  zllm_pt-br.html
playground/zllm/: __init__.py  service.py
portifolio/: language_utils.py  middleware.py  sitemaps.py  urls.py  views.py
portifolio/fixtures/: projects.json
portifolio/static/: about.css  contact.css  home.css  projects.css  resume.css  zllm.js
portifolio/templates/: about.html  about_en.html  about_pt-br.html  contact.html  contact_en.html  (+10 more)
portifolio_mlziade/: asgi.py  settings.py  urls.py  wsgi.py
static/: about.js  base.css  base.js  colors.css  contact.js  critical.css  manifest.json  projects.js  responsive.css  resume.js  robots.txt  sw.js
templates/: 404.html  404_en.html  404_pt-br.html  base.html
(+6 files in other folders)
