[project]
name = "portifolio-mlziade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-bootstrap5>=25.1",
    "django-compressor>=4.5.1",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.16.0",
    "gevent>=25.5.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentry-sdk[django]>=2.42.0",
]
